# bottom-bot

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs
