[package]
name = "discord-bot-tom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
bottomify = "1.2.0"
toml = "0.5.8"
serde = { version = "1.0.133", features = ["derive"] }
regex = "1.5.4"
